[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
opencv-python = "^4.5.5"
pandas = "^1.4.2"
sympy = "^1.10.1"
tensorflow = "^2.9.0"
contextlib2 = "^21.6.0"
lxml = "^4.8.0"
matplotlib = "^3.5.2"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"